--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Professional Portfolio | Senior BI Developer</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;500;400&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<!-- HERO -->
+<section id="home" class="hero">
+  <div class="container">
+    <img src="https://avatars.githubusercontent.com/u/shahedshaikh" class="profile-img" alt="Profile">
+    <h1>Shahed Shaikh</h1>
+    <p>Senior Business Intelligence Developer<span class="typing-text"></span></p>
+    <a href="#contact" class="btn">Get In Touch</a>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="about">
+  <div class="container">
+    <h2 style="font-size:36px;">About Me</h2>
+
+    <div class="about-content">
+      <div class="about-text">
+        <p style="font-size:18px;">
+          I’m a Senior Business Intelligence Developer with strong experience in building
+          enterprise-grade analytics solutions using Power BI, Microsoft Fabric, and Azure.
+        </p>
+
+        <p style="font-size:18px;">
+          I specialize in designing scalable semantic models, optimizing DAX performance,
+          and delivering executive-ready dashboards across procurement, payroll,
+          finance, and operational analytics.
+        </p>
+
+        <p style="font-size:18px;">
+          I enjoy transforming complex, messy datasets into clear insights that drive
+          real business decisions — with performance optimization as a personal challenge.
+        </p>
+
+        <a href="#skills" class="btn" style="margin-top:15px;">View My Skills</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- SKILLS -->
+<section id="skills" class="skills">
+  <div class="container">
+    <h2 style="color:#f59e0b;text-align:center;margin-bottom:40px;font-size:36px;">
+      Skills & Expertise
+    </h2>
+
+    <div class="skills-container">
+      <div class="skill-card"><i class="fas fa-chart-bar"></i><h3>Power BI</h3></div>
+      <div class="skill-card"><i class="fas fa-database"></i><h3>Microsoft Fabric</h3></div>
+      <div class="skill-card"><i class="fas fa-cubes"></i><h3>DAX Optimization</h3></div>
+      <div class="skill-card"><i class="fas fa-filter"></i><h3>Power Query</h3></div>
+      <div class="skill-card"><i class="fas fa-server"></i><h3>SQL Server</h3></div>
+      <div class="skill-card"><i class="fas fa-cloud"></i><h3>Azure Data Stack</h3></div>
+      <div class="skill-card"><i class="fas fa-project-diagram"></i><h3>Data Modeling</h3></div>
+      <div class="skill-card"><i class="fas fa-bolt"></i><h3>Performance Tuning</h3></div>
+      <div class="skill-card"><i class="fas fa-robot"></i><h3>Power Automate</h3></div>
+      <div class="skill-card"><i class="fas fa-plug"></i><h3>REST APIs</h3></div>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="contact">
+  <div class="container">
+    <h2>Get In Touch</h2>
+    <p>Open to BI collaborations, consulting, and analytics discussions</p>
+
+    <div class="contact-info">
+      <div class="contact-item">
+        <i class="fas fa-envelope"></i>
+        <h3>Email</h3>
+        <p>shahed@example.com</p>
+      </div>
+
+      <div class="contact-item">
+        <i class="fab fa-linkedin"></i>
+        <h3>LinkedIn</h3>
+        <a href="https://www.linkedin.com/in/shahed-shaikh-4608a110b/" target="_blank">
+          View Profile
+        </a>
+      </div>
+
+      <div class="contact-item">
+        <i class="fab fa-github"></i>
+        <h3>GitHub</h3>
+        <a href="https://github.com/shahedshaikh" target="_blank">
+          View Repositories
+        </a>
+      </div>
+    </div>
+
+    <button class="btn">Contact Me</button>
+  </div>
+</section>
+
+<footer>
+  <p>&copy; 2026 Shahed Shaikh • Business Intelligence & Analytics</p>
+</footer>
+
+</body>
+</html>
+
 
